fixed login z-index

--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@ input::placeholder {
 .sticky {
   position: fixed;
   width: 100%;
-  z-index: 9999;
+  z-index: 999;
   top: 0;
   left: 0;
 }
