--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -1,4 +1,5 @@
 .search-container {
+  margin-top: 5rem;
 }
 
 .input-search-container {
@@ -15,7 +16,7 @@
 .input-search::placeholder {
   position: absolute;
   -webkit-transform: translate3d(0, 0, 0);
-  z-index: 9999;
+  z-index: 9997;
 }
 
 .search-icon-input {
