--- a/src/styles/book.css
+++ b/src/styles/book.css
@@ -1,4 +1,5 @@
 .single-book-wrapper {
+  margin-top: 5rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
 
