--- a/src/styles/genre.css
+++ b/src/styles/genre.css
@@ -6,6 +6,7 @@
 }
 
 .genre-container {
+  margin-top: 5rem;
   display: flex;
   flex-direction: column;
   /* padding: 2rem; */
