--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 5rem;
   /* width: 100vw; */
   /* height: 100vh; */
 }
@@ -51,7 +52,7 @@
 .input-form::placeholder {
   position: absolute;
   -webkit-transform: translate3d(0, 0, 0);
-  z-index: 9999;
+  z-index: 9996;
 }
 
 .signup-social-media {
